Added mysql as a dependency to the app container

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     build: .
     image: phlak/dev-env:local
     depends_on:
+      - mysql
       - redis
     environment:
       APP_ENV: local
