--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     environment:
       APP_ENV: local
       LOG_CHANNEL: stderr
-      DB_HOST: ${DB_HOST:-chriskankiewicz-mysql}
+      DB_HOST: mysql
       DB_PORT: ${DB_PORT:-3306}
       DB_DATABASE: ${DB_DATABASE:-app}
       DB_USERNAME: ${DB_USERNAME:-laravel}
