--- a/.editorconfig
+++ b/.editorconfig
@@ -15,6 +15,10 @@ indent_size = 4
 [*.md]
 trim_trailing_whitespace = false
 
+[*.{neon,neon.dist}]
+indent_style = space
+indent_size = 2
+
 [*.{yml,yaml}]
 indent_size = 2
 indent_style = space
