--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
-/node_modules
-/public/css/*
-/public/js/*
-/public/hot
-/public/storage
-/public/mix-manifest.json
-/storage/*.key
-/vendor
 /.idea
+/.vagrant
 /.vscode
 /nbproject
-/.vagrant
-_ide_helper.php
+/node_modules
+/public/css/*
+/public/hot
+/public/js/*
+/public/mix-manifest.json
+/public/storage
+/storage/*.key
+/vendor
 _ide_helper_models.php
+_ide_helper.php
+.env
+.npmrc
+.php-cs-fixer.cache
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
-.npmrc
-.phpunit.result.cache
-.php_cs.cache
