--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["Chris Kankiewicz"],
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
+        "php": "^7.4 || ^8.0",
         "erusev/parsedown-extra": "^0.8",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
