--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "facade/ignition": "^2.3",
         "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.0",
+        "kirschbaum-development/laravel-openapi-validator": "^0.1.3",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
         "phlak/coding-standards": "^2.0",
