--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - mysql
       - redis
-    environment:
+    environment: &app-environment
       APP_ENV: local
       LOG_CHANNEL: stderr
       DB_HOST: mysql
@@ -57,6 +57,22 @@ services:
     profiles: [npm]
     user: ${HOST_USER_ID:-0}:${HOST_GROUP_ID:-0}
     command: npm run watch
+
+  artisan:
+    container_name: chriskankiewicz-artisan
+    image: phlak/chriskankiewicz-app:dev
+    entrypoint: php artisan
+    depends_on:
+      - mysql
+      - redis
+    profiles: [artisan]
+    environment:
+      <<: *app-environment
+    volumes:
+      - ./:/var/www/html
+      - ./.docker/php/config/php.ini:/usr/local/etc/php/php.ini
+      - ./.docker/apache2/config/000-default.conf:/etc/apache2/sites-available/000-default.conf
+    user: ${HOST_USER_ID:-0}:${HOST_GROUP_ID:-0}
 
 volumes:
   mysql-data:
