Updated to Laravel 9

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,12 +36,13 @@ services:
     ports:
       - ${DB_PORT:-3306}:3306
     environment:
-      MYSQL_RANDOM_ROOT_PASSWORD: 'yes'
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_DATABASE: ${DB_DATABASE:-app}
       MYSQL_USER: ${DB_USERNAME:-laravel}
       MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
     volumes:
       - mysql-data:/var/lib/mysql
+      - ./.docker/mysql/:/docker-entrypoint-initdb.d
 
   redis:
     container_name: chriskankiewicz-redis
