--- a/.docker/php/config/php.ini
+++ b/.docker/php/config/php.ini
@@ -3,3 +3,8 @@ error_reporting = E_ALL
 log_errors = On
 max_execution_time = 120
 memory_limit = -1
+
+[xdebug]
+xdebug.mode = debug
+xdebug.client_host = host.docker.internal
+xdebug.client_port = 9003
