--- a/composer.json
+++ b/composer.json
@@ -2,34 +2,34 @@
     "name": "phlak/chriskankiewicz.com",
     "type": "project",
     "description": "The homepage of Chris Kankiewicz.",
-    "keywords": ["Chris Kankiewicz"],
+    "keywords": [
+        "Chris Kankiewicz"
+    ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "erusev/parsedown-extra": "^0.8",
-        "fideloper/proxy": "^4.0",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0",
-        "laravel/framework": "^8.0",
+        "fruitcake/laravel-cors": "^3.0",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^9.0",
         "laravel/nova": "^3.0",
         "laravel/telescope": "^4.0",
-        "laravel/tinker": "^2.0",
+        "laravel/tinker": "^2.7",
         "laravel/ui": "^3.0",
         "spatie/yaml-front-matter": "^2.0",
-        "symfony/yaml": "^5.0"
+        "symfony/yaml": "^6.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "beyondcode/laravel-dump-server": "^1.0",
-        "facade/ignition": "^2.3",
         "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.0",
-        "kirschbaum-development/laravel-openapi-validator": "^0.1.3",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "nunomaduro/larastan": "^1.0",
+        "nunomaduro/collision": "^6.1",
+        "nunomaduro/larastan": "^2.1",
         "phlak/coding-standards": "^2.0",
-        "phpunit/phpunit": "^9.3"
+        "phpunit/phpunit": "^9.5",
+        "spatie/laravel-ignition": "^1.0"
     },
     "suggest": {
         "ext-yaml": "Required for initial database seeding"
@@ -45,7 +45,9 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         },
-         "files": ["app/Support/helpers.php"]
+        "files": [
+            "app/Support/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
@@ -58,8 +60,8 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
-            "@php artisan ide-helper:generate || true",
-            "@php artisan ide-helper:models --nowrite || true"
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:models --nowrite"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
