--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "beyondcode/laravel-dump-server": "^1.0",
+        "captainhook/captainhook": "^5.10",
+        "captainhook/plugin-composer": "^5.3",
         "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.3.1",
@@ -37,7 +39,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "captainhook/plugin-composer": true
+        }
     },
     "autoload": {
         "psr-4": {
