--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "captainhook/plugin-composer": "^5.3",
         "fakerphp/faker": "^1.9.1",
         "filp/whoops": "^2.0",
+        "kirschbaum-development/laravel-openapi-validator": "^0.2.0",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
         "nunomaduro/larastan": "^2.1",
