--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -115,3 +115,12 @@ jobs:
           APP_KEY: ${{ secrets.APP_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: vendor/bin/phpunit --coverage-text
+
+  deploy:
+    name: Deploy
+    runs-on: 'ubuntu-latest'
+    needs: [coding-standards, static-analysis, tests]
+
+    steps:
+      - name: Call Deployment Hook
+        run: curl ${{ secrets.DEPLOYMENT_HOOK_URL }}?token=${{ secrets.DEPLOYMENT_HOOK_TOKEN }}
