--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME="Chris Kankiewicz"
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://chriskankiewicz.local
 APP_TIMEZONE=UTC
 
@@ -10,14 +10,14 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=app
+DB_USERNAME=laravel
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
 REDIS_HOST=127.0.0.1
