--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,18 +8,6 @@ services:
     depends_on:
       - mysql
       - redis
-    environment: &app-environment
-      APP_ENV: local
-      LOG_CHANNEL: stderr
-      DB_HOST: mysql
-      DB_PORT: ${DB_PORT:-3306}
-      DB_DATABASE: ${DB_DATABASE:-app}
-      DB_USERNAME: ${DB_USERNAME:-laravel}
-      DB_PASSWORD: ${DB_PASSWORD:-secret}
-      CACHE_DRIVER: redis
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      COMPOSER_AUTH: ${COMPOSER_AUTH}
     ports:
       - ${APP_PORT:-80}:80
     extra_hosts:
@@ -37,9 +25,9 @@ services:
       - ${DB_PORT:-3306}:3306
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-      MYSQL_DATABASE: ${DB_DATABASE:-app}
-      MYSQL_USER: ${DB_USERNAME:-laravel}
-      MYSQL_PASSWORD: ${DB_PASSWORD:-secret}
+      MYSQL_DATABASE: app
+      MYSQL_USER: laravel
+      MYSQL_PASSWORD: secret
     volumes:
       - mysql-data:/var/lib/mysql
       - ./.docker/mysql/:/docker-entrypoint-initdb.d
@@ -66,8 +54,6 @@ services:
       - mysql
       - redis
     profiles: [artisan]
-    environment:
-      <<: *app-environment
     volumes:
       - ./:/var/www/html
       - ./.docker/php/config/php.ini:/usr/local/etc/php/php.ini
