--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-/.idea
-/.vagrant
-/.vscode
-/nbproject
 /node_modules
 /public/css/*
-/public/hot
 /public/js/*
 /public/mix-manifest.json
 /public/storage
@@ -13,10 +8,9 @@
 _ide_helper_models.php
 _ide_helper.php
 .env
+.env.*
 .npmrc
 .php-cs-fixer.cache
 .phpunit.result.cache
-Homestead.json
-Homestead.yaml
+docker-compose.override.yaml
 npm-debug.log
-yarn-error.log
