--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,7 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
-            "@php artisan telescope:publish",
+            "@php artisan vendor:publish --tag laravel-assets",
             "@php artisan ide-helper:generate",
             "@php artisan ide-helper:models --nowrite"
         ],
