Updated ClearChecks title

--- a/database/seeders/data/experience.yaml
+++ b/database/seeders/data/experience.yaml
@@ -105,7 +105,7 @@
     - Docker
 
 - company: ClearChecks
-  title: Senior Software Engineer
+  title: Lead Software Engineer
   description: |-
     - Developed, designed and maintained ClearChecks background checks SaaS application.
     - Implemented development workflow featuring continuous integration testing and analysis.
