Update build scripts

--- a/.github/workflows/test-suite.yaml
+++ b/.github/workflows/test-suite.yaml
@@ -107,7 +107,7 @@ jobs:
         run: npx eslint resources/js/**/*.{js,vue}
 
       - name: Compile Assets
-        run: npm run production --verbose
+        run: npm run build --verbose
 
       - name: Run Tests
         env:
