--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
         "cross-env": "^7.0.3",
         "eslint": "^8.5.0",
         "eslint-plugin-vue": "^8.2.0",
-        "laravel-mix": "^6.0.13",
         "lodash": "^4.17.21",
         "postcss": "^8.4.5",
         "prismjs": "^1.23.0",
         "sass": "^1.32.8",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^3.0.7",
-        "vue": "^2.6.12",
+        "vue": "^2.7.0",
         "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "vite": "^3.0.2",
+        "laravel-vite-plugin": "^0.6.0",
+        "@vitejs/plugin-vue2": "^1.1.2"
     }
 }
