--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -43,6 +43,8 @@ services:
     image: phlak/chriskankiewicz-app:dev
     volumes:
       - ./:/var/www/html
+    ports:
+      - ${APP_PORT:-5173}:5173
     user: ${HOST_USER_ID:-0}:${HOST_GROUP_ID:-0}
     command: npm run dev
 
