--- a/package.json
+++ b/package.json
@@ -8,22 +8,20 @@
     "devDependencies": {
         "@fortawesome/fontawesome-pro": "^6.0.0",
         "@fullhuman/postcss-purgecss": "^4.0.2",
+        "@vitejs/plugin-vue": "^3.1.2",
         "autoprefixer": "^10.4.0",
         "axios": "^0.26.1",
         "cross-env": "^7.0.3",
         "eslint": "^8.5.0",
-        "eslint-plugin-vue": "^8.2.0",
+        "eslint-plugin-vue": "^9.6.0",
+        "laravel-vite-plugin": "^0.7.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.5",
         "prismjs": "^1.23.0",
-        "sass": "^1.32.8",
-        "sass-loader": "^12.1.0",
+        "sass": "^1.55.0",
+        "sass-loader": "^13.1.0",
         "tailwindcss": "^3.0.7",
-        "vue": "^2.7.0",
-        "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.12",
         "vite": "^3.0.2",
-        "laravel-vite-plugin": "^0.6.0",
-        "@vitejs/plugin-vue2": "^1.1.2"
+        "vue": "^3.2.41"
     }
 }
