--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "scripts": {
-        "cs": "npx eslint resources/js/**/*.{js,vue} || true",
+        "cs": "npx eslint --ext .js,.vue resources/js/",
         "dev": "vite",
         "build": "vite build"
     },
