--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/dbal": "^3.0",
         "erusev/parsedown-extra": "^0.8",
-        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^10.15",
+        "laravel/sanctum": "^3.2",
         "laravel/telescope": "^4.0",
-        "laravel/tinker": "^2.7",
+        "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "spatie/yaml-front-matter": "^2.0",
         "symfony/yaml": "^6.0"
@@ -21,29 +22,29 @@
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.8",
         "beyondcode/laravel-dump-server": "^1.0",
-        "brianium/paratest": "^6.4",
+        "brianium/paratest": "^7.2",
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3",
         "fakerphp/faker": "^1.9.1",
-        "filp/whoops": "^2.0",
-        "kirschbaum-development/laravel-openapi-validator": "^0.2.0",
+        "kirschbaum-development/laravel-openapi-validator": "^0.3.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^6.1",
-        "nunomaduro/larastan": "^2.1",
-        "phlak/coding-standards": "^2.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ignition": "^1.0"
+        "nunomaduro/collision": "^7.0",
+        "nunomaduro/larastan": "^2.6",
+        "phlak/coding-standards": "^2.2",
+        "phpunit/phpunit": "^10.1",
+        "spatie/laravel-ignition": "^2.0"
     },
     "suggest": {
         "ext-yaml": "Required for initial database seeding"
     },
     "config": {
-        "optimize-autoloader": true,
-        "preferred-install": "dist",
-        "sort-packages": true,
         "allow-plugins": {
             "captainhook/plugin-composer": true
-        }
+        },
+        "optimize-autoloader": true,
+        "platform-check": true,
+        "preferred-install": "dist",
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
@@ -60,7 +61,7 @@
             "Tests\\": "tests/"
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "scripts": {
         "post-autoload-dump": [
