--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
     },
     "config": {
         "allow-plugins": {
-            "captainhook/plugin-composer": true
+            "captainhook/plugin-composer": true,
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         },
         "optimize-autoloader": true,
         "platform-check": true,
