Updated phpstan baseline

--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -6,11 +6,6 @@ parameters:
 			path: app/GitHub/Client.php
 
 		-
-			message: "#^Method App\\\\GitHub\\\\Client\\:\\:repository\\(\\) throws checked exception RuntimeException but it's missing from the PHPDoc @throws tag\\.$#"
-			count: 1
-			path: app/GitHub/Client.php
-
-		-
 			message: "#^Method App\\\\Http\\\\Controllers\\\\Api\\\\AccomplishmentController\\:\\:index\\(\\) return type with generic class Illuminate\\\\Database\\\\Eloquent\\\\Collection does not specify its types\\: TKey, TModel$#"
 			count: 1
 			path: app/Http/Controllers/Api/AccomplishmentController.php
@@ -39,11 +34,6 @@ parameters:
 			message: "#^Method App\\\\Http\\\\Controllers\\\\Api\\\\SkillController\\:\\:index\\(\\) return type with generic class Illuminate\\\\Database\\\\Eloquent\\\\Collection does not specify its types\\: TKey, TModel$#"
 			count: 1
 			path: app/Http/Controllers/Api/SkillController.php
-
-		-
-			message: "#^Method App\\\\Http\\\\Middleware\\\\RedirectIfAuthenticated\\:\\:handle\\(\\) has no return type specified\\.$#"
-			count: 1
-			path: app/Http/Middleware/RedirectIfAuthenticated.php
 
 		-
 			message: "#^Method App\\\\Post\\:\\:forFeed\\(\\) return type with generic class Illuminate\\\\Database\\\\Eloquent\\\\Collection does not specify its types\\: TKey, TModel$#"
@@ -76,19 +66,14 @@ parameters:
 			path: app/Post.php
 
 		-
-			message: "#^Method Database\\\\Factories\\\\SkillFactory\\:\\:definition\\(\\) throws checked exception OverflowException but it's missing from the PHPDoc @throws tag\\.$#"
+			message: "#^Method App\\\\View\\\\Components\\\\Paginator\\:\\:__construct\\(\\) has parameter \\$paginator with generic class Illuminate\\\\Pagination\\\\Paginator but does not specify its types\\: TValue$#"
 			count: 1
-			path: database/factories/SkillFactory.php
+			path: app/View/Components/Paginator.php
 
 		-
-			message: "#^Method Database\\\\Factories\\\\TagFactory\\:\\:definition\\(\\) throws checked exception OverflowException but it's missing from the PHPDoc @throws tag\\.$#"
+			message: "#^Property App\\\\View\\\\Components\\\\Paginator\\:\\:\\$paginator with generic class Illuminate\\\\Pagination\\\\Paginator does not specify its types\\: TValue$#"
 			count: 1
-			path: database/factories/TagFactory.php
-
-		-
-			message: "#^Method Database\\\\Factories\\\\UserFactory\\:\\:definition\\(\\) throws checked exception OverflowException but it's missing from the PHPDoc @throws tag\\.$#"
-			count: 1
-			path: database/factories/UserFactory.php
+			path: app/View/Components/Paginator.php
 
 		-
 			message: "#^Return type \\(array\\<string, mixed\\>\\) of method Database\\\\Factories\\\\UserFactory\\:\\:definition\\(\\) should be compatible with return type \\(array\\<string, mixed\\>\\) of method Illuminate\\\\Database\\\\Eloquent\\\\Factories\\\\Factory\\<App\\\\User\\>\\:\\:definition\\(\\)$#"
