--- a/composer.json
+++ b/composer.json
@@ -7,30 +7,28 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
-        "doctrine/dbal": "^3.0",
+        "php": "^8.3",
         "erusev/parsedown-extra": "^0.8",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.15",
-        "laravel/sanctum": "^3.2",
-        "laravel/telescope": "^4.0",
+        "laravel/framework": "^11.0",
+        "laravel/sanctum": "^4.0",
+        "laravel/telescope": "^5.0",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.0",
         "spatie/yaml-front-matter": "^2.0",
         "symfony/yaml": "^6.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.8",
-        "beyondcode/laravel-dump-server": "^1.0",
+        "barryvdh/laravel-ide-helper": "^3.1",
         "brianium/paratest": "^7.2",
         "captainhook/captainhook": "^5.10",
         "captainhook/plugin-composer": "^5.3",
         "fakerphp/faker": "^1.9.1",
-        "kirschbaum-development/laravel-openapi-validator": "^0.3.0",
+        "kirschbaum-development/laravel-openapi-validator": "^1.0",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.6",
-        "phlak/coding-standards": "^2.2",
+        "nunomaduro/collision": "^8.0",
+        "larastan/larastan": "^2.9",
+        "phlak/coding-standards": "^3.0",
         "phpunit/phpunit": "^10.1",
         "spatie/laravel-ignition": "^2.0"
     },
