--- a/.env.example
+++ b/.env.example
@@ -15,8 +15,11 @@ DB_USERNAME=laravel
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=redis
+
+CACHE_STORE=redis
+
 QUEUE_CONNECTION=sync
+
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
