--- a/composer.json
+++ b/composer.json
@@ -68,8 +68,8 @@
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
             "@php artisan vendor:publish --tag laravel-assets",
-            "@php artisan ide-helper:generate",
-            "@php artisan ide-helper:models --nowrite"
+            "@php artisan ide-helper:generate || true",
+            "@php artisan ide-helper:models --nowrite || true"
         ],
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
