--- a/database/seeders/data/accomplishments.yaml
+++ b/database/seeders/data/accomplishments.yaml
@@ -1,8 +1,7 @@
 - description: Eagle Scout
-- description: Attended Laracon 2016, 2018
-- description: Regular attendee of [Laracon Online](https://laracon.net)
+- description: Regular attendee of [Laracon](https://laracon.us) and [Laracon Online](https://laracon.net)
 - description: Regular [azPHP](https://www.meetup.com/azPHPUG/) attendee/presenter
-- description: Active [PHX2600](https://www.phx2600.org) member
+- description: Past [PHX2600](https://www.phx2600.org) member
 - description: Past attendee of Defcon Security Conference
-- description: Regular attendee of CactusCon Security Conference
+- description: Past attendee of CactusCon Security Conference
 - description: Active in various online and community events
