--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,7 +11,7 @@ parameters:
         - routes
         - tests
 
-    level: 7 # 0 - 8 (higher = more strict)
+    level: max
 
     ignoreErrors:
         - '/^Call to an undefined method Faker\\Generator::[A-Za-z]+\(\)\.$/'
@@ -19,9 +19,6 @@ parameters:
         - '/^Access to an undefined property Faker\\UniqueGenerator::\$[A-Za-z]+\.$/'
         - '/^Access to an undefined property Spatie\\YamlFrontMatter\\Document::\$[a-z_]+.$/'
 
-    checkAlwaysTrueCheckTypeFunctionCall: true
-    checkAlwaysTrueInstanceof: true
-    checkAlwaysTrueStrictComparison: true
     checkExplicitMixedMissingReturn: true
     checkFunctionNameCase: true
     # checkMissingClosureNativeReturnTypehintRule: true
