Vite build fixes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "cs": "npx eslint --ext .js,.vue resources/js/",
         "dev": "vite",
